完善权限功能（按钮权限以及请求权限）